Base ide filter for vscode and sublime text

--- a/info.plist
+++ b/info.plist
@@ -44,6 +44,29 @@
 				<false/>
 			</dict>
 		</array>
+		<key>95132ABC-8907-4D39-B228-4D9EF25A6AF8</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>E60D2519-7CAB-4FF3-B7C5-FBAC4005F275</string>
+				<key>modifiers</key>
+				<integer>131072</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>4070677F-9691-4F1C-B4C1-A1ED626281B9</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>C8EE14FF-A6AA-4932-8E59-C3DE503DF3F3</key>
 		<array>
 			<dict>
@@ -70,8 +93,6 @@
 				<false/>
 			</dict>
 		</array>
-		<key>DC9D709A-675E-4C3D-BB7A-0258A4180B89</key>
-		<array/>
 		<key>color_filter</key>
 		<array>
 			<dict>
@@ -266,29 +287,6 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>echo $query</string>
-				<key>scriptargtype</key>
-				<integer>0</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>DC9D709A-675E-4C3D-BB7A-0258A4180B89</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
 				<key>argumenttype</key>
@@ -328,6 +326,25 @@
 			<string>87A559E4-1751-4378-A99E-5F40F391FC8A</string>
 			<key>version</key>
 			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>{query}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>E60D2519-7CAB-4FF3-B7C5-FBAC4005F275</string>
+			<key>version</key>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -390,25 +407,6 @@
 			<string>jira</string>
 			<key>version</key>
 			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>browser</key>
-				<string></string>
-				<key>spaces</key>
-				<string></string>
-				<key>url</key>
-				<string>{query}</string>
-				<key>utf8</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
-			<key>uid</key>
-			<string>E60D2519-7CAB-4FF3-B7C5-FBAC4005F275</string>
-			<key>version</key>
-			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -499,6 +497,31 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>query='{query}'
+
+/usr/local/bin/subl "$query"</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string>/usr/local/bin/code {query}</string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>4070677F-9691-4F1C-B4C1-A1ED626281B9</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
 				<key>argumenttype</key>
@@ -536,6 +559,49 @@
 			<string>alfred.workflow.input.scriptfilter</string>
 			<key>uid</key>
 			<string>C8EE14FF-A6AA-4932-8E59-C3DE503DF3F3</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>keyword</key>
+				<string>subl</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string>搜索{query}中…</string>
+				<key>script</key>
+				<string>/usr/bin/ruby main.rb "subl,{query}";</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string>open in sublime...</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>95132ABC-8907-4D39-B228-4D9EF25A6AF8</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -590,9 +656,16 @@
 		<key>2FF12C66-513B-4502-BE18-8106A9169525</key>
 		<dict>
 			<key>xpos</key>
-			<integer>580</integer>
-			<key>ypos</key>
 			<integer>560</integer>
+			<key>ypos</key>
+			<integer>540</integer>
+		</dict>
+		<key>4070677F-9691-4F1C-B4C1-A1ED626281B9</key>
+		<dict>
+			<key>xpos</key>
+			<integer>930</integer>
+			<key>ypos</key>
+			<integer>570</integer>
 		</dict>
 		<key>57CF52E7-5D07-445D-B912-657419AFFA26</key>
 		<dict>
@@ -615,6 +688,13 @@
 			<key>ypos</key>
 			<integer>260</integer>
 		</dict>
+		<key>95132ABC-8907-4D39-B228-4D9EF25A6AF8</key>
+		<dict>
+			<key>xpos</key>
+			<integer>700</integer>
+			<key>ypos</key>
+			<integer>640</integer>
+		</dict>
 		<key>BB9492CD-5860-462C-8DD7-027B4E266118</key>
 		<dict>
 			<key>xpos</key>
@@ -636,19 +716,12 @@
 			<key>ypos</key>
 			<integer>650</integer>
 		</dict>
-		<key>DC9D709A-675E-4C3D-BB7A-0258A4180B89</key>
-		<dict>
-			<key>xpos</key>
-			<integer>920</integer>
-			<key>ypos</key>
-			<integer>180</integer>
-		</dict>
 		<key>E60D2519-7CAB-4FF3-B7C5-FBAC4005F275</key>
 		<dict>
 			<key>xpos</key>
-			<integer>850</integer>
+			<integer>910</integer>
 			<key>ypos</key>
-			<integer>380</integer>
+			<integer>330</integer>
 		</dict>
 		<key>color_filter</key>
 		<dict>
