--- a/info.plist
+++ b/info.plist
@@ -113,7 +113,7 @@
 				<false/>
 			</dict>
 		</array>
-		<key>C8EE14FF-A6AA-4932-8E59-C3DE503DF3F3</key>
+		<key>github_logo</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
@@ -166,6 +166,19 @@
 			</dict>
 		</array>
 		<key>jira</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>57CF52E7-5D07-445D-B912-657419AFFA26</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>kibana_logo</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
@@ -698,7 +711,7 @@ open -a "`ls -dt /Applications/PyCharm.app*|head -1`" "$query"</string>
 				<key>runningsubtext</key>
 				<string>搜索{query}中…</string>
 				<key>script</key>
-				<string>/usr/bin/ruby main.rb "stgh,{query}"; </string>
+				<string> /usr/bin/ruby main.rb "stgh,{query}"; </string>
 				<key>scriptargtype</key>
 				<integer>0</integer>
 				<key>scriptfile</key>
@@ -715,7 +728,7 @@ open -a "`ls -dt /Applications/PyCharm.app*|head -1`" "$query"</string>
 			<key>type</key>
 			<string>alfred.workflow.input.scriptfilter</string>
 			<key>uid</key>
-			<string>C8EE14FF-A6AA-4932-8E59-C3DE503DF3F3</string>
+			<string>github_logo</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -830,6 +843,49 @@ open -a "`ls -dt /Applications/Sublime\ Text.app*|head -1`" "$query"</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>126</integer>
+				<key>keyword</key>
+				<string>kia</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string>搜索{query}中…</string>
+				<key>script</key>
+				<string>/usr/bin/ruby main.rb "kibana,{query}"; </string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string>Open kibana...</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>kibana_logo</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string>Updated by Andreas Stokholm to be able to handle multiple local IP-addresses.</string>
@@ -912,19 +968,19 @@ open -a "`ls -dt /Applications/Sublime\ Text.app*|head -1`" "$query"</string>
 			<key>ypos</key>
 			<integer>130</integer>
 		</dict>
-		<key>C8EE14FF-A6AA-4932-8E59-C3DE503DF3F3</key>
+		<key>github_logo</key>
 		<dict>
 			<key>xpos</key>
-			<integer>230</integer>
+			<integer>200</integer>
 			<key>ypos</key>
-			<integer>620</integer>
+			<integer>630</integer>
 		</dict>
 		<key>DAAA78B9-EF63-40EC-B8FB-18FBB7C155D3</key>
 		<dict>
 			<key>xpos</key>
-			<integer>370</integer>
+			<integer>450</integer>
 			<key>ypos</key>
-			<integer>650</integer>
+			<integer>660</integer>
 		</dict>
 		<key>E60D2519-7CAB-4FF3-B7C5-FBAC4005F275</key>
 		<dict>
@@ -953,6 +1009,13 @@ open -a "`ls -dt /Applications/Sublime\ Text.app*|head -1`" "$query"</string>
 			<integer>150</integer>
 			<key>ypos</key>
 			<integer>380</integer>
+		</dict>
+		<key>kibana_logo</key>
+		<dict>
+			<key>xpos</key>
+			<integer>270</integer>
+			<key>ypos</key>
+			<integer>750</integer>
 		</dict>
 		<key>stj</key>
 		<dict>
